--- a/about.html
+++ b/about.html
@@ -439,7 +439,7 @@
                             </div>
                         </div>
                         <div class="team-info">
-                            <h3 class="team-name">Sarah Kim</h3>
+                            <h3 class="team-name">Jaime Sung</h3>
                             <p class="team-position">Founder & CEO</p>
                             <p class="team-bio">
                                 With over 7 years of experience in Korean-English translation and foreign assistance, Sarah founded KoreAmigo to help foreigners navigate life in Korea with ease.
