--- a/about.html
+++ b/about.html
@@ -442,7 +442,7 @@
                             <h3 class="team-name">Jaime Sung</h3>
                             <p class="team-position">Founder & CEO</p>
                             <p class="team-bio">
-                                With over 7 years of experience in Korean-English translation and foreign assistance, Sarah founded KoreAmigo to help foreigners navigate life in Korea with ease.
+                                With over 7 years of experience in Korean-English translation and foreign assistance, Jaime founded KoreAmigo to help foreigners navigate life in Korea with ease.
                             </p>
                             <div class="team-social">
                                 <a href="#"><i class="fab fa-linkedin-in"></i></a>
