about.html 업데이트

--- a/about.html
+++ b/about.html
@@ -460,10 +460,10 @@
                             </div>
                         </div>
                         <div class="team-info">
-                            <h3 class="team-name">Min-ho Park</h3>
-                            <p class="team-position">Operations Director</p>
+                            <h3 class="team-name">Sue</h3>
+                            <p class="team-position">Executive Adviser</p>
                             <p class="team-bio">
-                                Min-ho brings 5+ years of experience in project management and customer service to ensure smooth operations and exceptional service delivery.
+                                Behind every successful startup is a voice of reason. Sue brings literary wisdom, strategic snack delivery, and an uncanny ability to translate human emotions into business sense – keeping KoreAmigo both grounded and well-fed.​​​​​​​​​​​​​​​​
                             </p>
                             <div class="team-social">
                                 <a href="#"><i class="fab fa-linkedin-in"></i></a>
