about.html 업데이트

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - KoreAmigo</title>
+    <title>About Us - AvoKado</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -313,7 +313,7 @@
         <div class="container">
             <div class="logo">
                 <a href="index.html">
-                    <h1>KoreAmigo</h1>
+                    <h1>AvoKado</h1>
                 </a>
             </div>
             <nav class="nav">
@@ -350,7 +350,7 @@
     <main>
         <section class="about-hero">
             <div class="container">
-                <h1 class="about-hero-title">About KoreAmigo</h1>
+                <h1 class="about-hero-title">About AvoKado</h1>
                 <p class="about-hero-subtitle">Your trusted companion for navigating life in Korea</p>
             </div>
         </section>
@@ -442,7 +442,7 @@
                             <h3 class="team-name">Jaime Sung</h3>
                             <p class="team-position">Founder & CEO</p>
                             <p class="team-bio">
-                                With over 7 years of experience in Korean-English translation and foreign assistance, Jaime founded KoreAmigo to help foreigners navigate life in Korea with ease.
+                                With over 7 years of experience in Korean-English translation and foreign assistance, Jaime founded AvoKado to help foreigners navigate life in Korea with ease.
                             </p>
                             <div class="team-social">
                                 <a href="#"><i class="fab fa-linkedin-in"></i></a>
@@ -463,7 +463,7 @@
                             <h3 class="team-name">Sue</h3>
                             <p class="team-position">Executive Adviser</p>
                             <p class="team-bio">
-                                Behind every successful startup is a voice of reason. Sue brings literary wisdom, strategic snack delivery, and an uncanny ability to translate human emotions into business sense – keeping KoreAmigo both grounded and well-fed.​​​​​​​​​​​​​​​​
+                                Behind every successful startup is a voice of reason. Sue brings literary wisdom, strategic snack delivery, and an uncanny ability to translate human emotions into business sense – keeping AvoKado both grounded and well-fed.​​​​​​​​​​​​​​​​
                             </p>
                             <div class="team-social">
                                 <a href="#"><i class="fab fa-linkedin-in"></i></a>
@@ -527,7 +527,7 @@
                         <div class="timeline-content">
                             <div class="timeline-date">2025</div>
                             <h3 class="timeline-title">The Beginning</h3>
-                            <p>KoreAmigo was founded with a vision to help foreigners navigate life in Korea. Initial research and market analysis conducted.</p>
+                            <p>AvoKado was founded with a vision to help foreigners navigate life in Korea. Initial research and market analysis conducted.</p>
                         </div>
                     </div>
                     
@@ -571,7 +571,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <h2>KoreAmigo</h2>
+                    <h2>AvoKado</h2>
                     <p>Your Friend in Korea</p>
                 </div>
                 <div class="footer-links">
@@ -595,7 +595,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 KoreAmigo. All Rights Reserved.</p>
+                <p>&copy; 2025 AvoKado. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
