index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KoreAmigo - Support for Foreigners in Korea</title>
+    <title>AvoKado - Support for Foreigners in Korea</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -225,7 +225,7 @@
         <div class="container">
             <div class="logo">
                 <a href="index.html">
-                    <h1>KoreAmigo</h1>
+                    <h1>AvoKado</h1>
                 </a>
             </div>
             <nav class="nav">
@@ -302,7 +302,7 @@
 
         <section class="features-section">
             <div class="container">
-                <h2 class="section-title">Why Choose KoreAmigo</h2>
+                <h2 class="section-title">Why Choose AvoKado</h2>
                 <div class="features-grid">
                     <div class="feature-card">
                         <div class="feature-icon">
@@ -393,7 +393,7 @@
                 <h2 class="section-title">What Our Clients Say</h2>
                 <div class="testimonials-slider">
                     <div class="testimonial-card">
-                        <p class="testimonial-text">KoreAmigo made my transition to Korea incredibly smooth. Their housing support saved me from many potential pitfalls in finding an apartment and understanding the lease terms.</p>
+                        <p class="testimonial-text">AvoKado made my transition to Korea incredibly smooth. Their housing support saved me from many potential pitfalls in finding an apartment and understanding the lease terms.</p>
                         <p class="testimonial-author">- James Davidson, USA</p>
                     </div>
                 </div>
@@ -404,7 +404,7 @@
             <div class="container">
                 <div class="cta-content">
                     <h2 class="cta-title">Ready to Simplify Your Korean Experience?</h2>
-                    <p class="cta-text">Join KoreAmigo today and discover how easy life in Korea can be with the right support.</p>
+                    <p class="cta-text">Join AvoKado today and discover how easy life in Korea can be with the right support.</p>
                     <div class="cta-buttons">
                         <a href="pricing.html" class="btn btn-light">View Pricing</a>
                         <a href="#contact" class="btn btn-outline">Contact Us</a>
@@ -415,13 +415,13 @@
 
         <section id="about" class="about">
             <div class="container">
-                <h2 class="section-title">About KoreAmigo</h2>
+                <h2 class="section-title">About AvoKado</h2>
                 <div class="about-content">
                     <div class="about-image">
-                        <img src="assets/images/about-image.jpg" alt="KoreAmigo Team">
+                        <img src="assets/images/about-image.jpg" alt="AvoKado Team">
                     </div>
                     <div class="about-text">
-                        <p>KoreAmigo was founded with a simple mission: to help foreigners navigate life in Korea with ease and confidence. We understand the challenges of living in a foreign country and provide customized support services to make your Korean experience enjoyable and stress-free.</p>
+                        <p>AvoKado was founded with a simple mission: to help foreigners navigate life in Korea with ease and confidence. We understand the challenges of living in a foreign country and provide customized support services to make your Korean experience enjoyable and stress-free.</p>
                         <p>Our multilingual team consists of locals and expats who are passionate about cultural exchange and dedicated to bridging gaps between different cultures.</p>
                         <a href="about.html" class="btn btn-primary" style="margin-top: 20px;">Learn More About Us</a>
                     </div>
@@ -444,7 +444,7 @@
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
-                            <p>info@koreamigo.com</p>
+                            <p>info@AvoKado.com</p>
                         </div>
                     </div>
                     <form class="contact-form">
@@ -479,7 +479,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <h2>KoreAmigo</h2>
+                    <h2>AvoKado</h2>
                     <p>Your Friend in Korea</p>
                 </div>
                 <div class="footer-links">
@@ -505,7 +505,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 KoreAmigo. All Rights Reserved.</p>
+                <p>&copy; 2025 AvoKado. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
