--- a/resources.html
+++ b/resources.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resources - KoreAmigo</title>
+    <title>Resources - AvoKado</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -300,7 +300,7 @@
         <div class="container">
             <div class="logo">
                 <a href="index.html">
-                    <h1>KoreAmigo</h1>
+                    <h1>AvoKado</h1>
                 </a>
             </div>
             <nav class="nav">
@@ -597,7 +597,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <h2>KoreAmigo</h2>
+                    <h2>AvoKado</h2>
                     <p>Your Friend in Korea</p>
                 </div>
                 <div class="footer-links">
@@ -621,7 +621,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 KoreAmigo. All Rights Reserved.</p>
+                <p>&copy; 2025 AvoKado. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
