services.html 업데이트

--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Services - KoreAmigo</title>
+    <title>Our Services - AvoKado</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -163,7 +163,7 @@
         <div class="container">
             <div class="logo">
                 <a href="index.html">
-                    <h1>KoreAmigo</h1>
+                    <h1>AvoKado</h1>
                 </a>
             </div>
             <nav class="nav">
@@ -202,7 +202,7 @@
             <div class="container">
                 <h2 class="section-title">Our Comprehensive Services</h2>
                 <p class="text-center" style="max-width: 800px; margin: 0 auto 40px;">
-                    KoreAmigo provides a wide range of services to help foreigners navigate life in Korea with ease and confidence. Our services are designed to overcome language barriers, cultural differences, and administrative complexities.
+                    AvoKado provides a wide range of services to help foreigners navigate life in Korea with ease and confidence. Our services are designed to overcome language barriers, cultural differences, and administrative complexities.
                 </p>
                 
                 <div class="service-detail-grid">
@@ -342,7 +342,7 @@
                 <div class="testimonial-grid">
                     <div class="testimonial-card">
                         <p class="testimonial-quote">
-                            KoreAmigo made my transition to Korea incredibly smooth. Their housing support saved me from many potential pitfalls in finding an apartment and understanding the lease terms.
+                            AvoKado made my transition to Korea incredibly smooth. Their housing support saved me from many potential pitfalls in finding an apartment and understanding the lease terms.
                         </p>
                         <div class="testimonial-author">
                             <div class="testimonial-avatar">JD</div>
@@ -355,7 +355,7 @@
 
                     <div class="testimonial-card">
                         <p class="testimonial-quote">
-                            I needed help with medical translation during an emergency, and KoreAmigo responded within minutes. Their healthcare assistance service is truly lifesaving!
+                            I needed help with medical translation during an emergency, and AvoKado responded within minutes. Their healthcare assistance service is truly lifesaving!
                         </p>
                         <div class="testimonial-author">
                             <div class="testimonial-avatar">LW</div>
@@ -368,7 +368,7 @@
 
                     <div class="testimonial-card">
                         <p class="testimonial-quote">
-                            The visa renewal process seemed daunting, but with KoreAmigo's documentation assistance, everything went perfectly. I highly recommend their services to all expats.
+                            The visa renewal process seemed daunting, but with AvoKado's documentation assistance, everything went perfectly. I highly recommend their services to all expats.
                         </p>
                         <div class="testimonial-author">
                             <div class="testimonial-avatar">SP</div>
@@ -387,7 +387,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <h2>KoreAmigo</h2>
+                    <h2>AvoKado</h2>
                     <p>Your Friend in Korea</p>
                 </div>
                 <div class="footer-links">
@@ -411,7 +411,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 KoreAmigo. All Rights Reserved.</p>
+                <p>&copy; 2025 AvoKado. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
