브랜드명을 MyQuokka로 변경하고 색상을 화사한 톤으로 업데이트

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KoreAmigo - 한국에서 외국인의 친구</title>
+    <title>MyQuokka - 한국에서 외국인의 친구</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
             color: #333;
-            background-color: #f9f9f9;
+            background-color: #F7FFF7;
         }
         .container {
             max-width: 1200px;
@@ -19,7 +19,7 @@
             padding: 20px;
         }
         header {
-            background-color: #4a6fa5;
+            background-color: #FF6B6B;
             color: white;
             text-align: center;
             padding: 40px 0;
@@ -29,7 +29,7 @@
             margin-bottom: 10px;
         }
         h2 {
-            color: #4a6fa5;
+            color: #4ECDC4;
             margin-top: 30px;
         }
         .intro {
@@ -51,14 +51,19 @@
             padding: 20px;
             border-radius: 8px;
             margin-bottom: 30px;
-            box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+            border-top: 3px solid #FF9F1C;
+            transition: transform 0.3s ease;
+        }
+        .feature:hover {
+            transform: translateY(-5px);
         }
         .feature h3 {
-            color: #4a6fa5;
+            color: #FF6B6B;
         }
         footer {
-            background-color: #333;
-            color: white;
+            background-color: #FFD166;
+            color: #333;
             text-align: center;
             padding: 20px 0;
             margin-top: 50px;
@@ -73,14 +78,14 @@
 <body>
     <header>
         <div class="container">
-            <h1>KoreAmigo</h1>
+            <h1>MyQuokka</h1>
             <p>한국에서 외국인의 친구</p>
         </div>
     </header>
 
     <div class="container">
         <div class="intro">
-            <p>KoreAmigo는 한국에 거주하거나 방문하는 외국인을 위한 올인원 플랫폼입니다. 언어 장벽, 문화적 차이, 복잡한 행정 절차를 해소하고 한국 생활을 더 쉽고 풍요롭게 만들어 드립니다.</p>
+            <p>MyQuokka는 한국에 거주하거나 방문하는 외국인을 위한 올인원 플랫폼입니다. 언어 장벽, 문화적 차이, 복잡한 행정 절차를 해소하고 한국 생활을 더 쉽고 풍요롭게 만들어 드립니다.</p>
         </div>
 
         <h2>주요 기능</h2>
@@ -112,12 +117,12 @@
         </div>
 
         <h2>함께 해요</h2>
-        <p>KoreAmigo는 한국에서 외국인들의 생활을 더 쉽고 풍요롭게 만들기 위해 노력하고 있습니다. 저희와 함께하여 외국인들에게 더 나은 경험을 제공해 보세요.</p>
+        <p>MyQuokka는 한국에서 외국인들의 생활을 더 쉽고 풍요롭게 만들기 위해 노력하고 있습니다. 저희와 함께하여 외국인들에게 더 나은 경험을 제공해 보세요.</p>
     </div>
 
     <footer>
         <div class="container">
-            <p>&copy; 2023 KoreAmigo. All rights reserved.</p>
+            <p>&copy; 2023 MyQuokka. All rights reserved.</p>
         </div>
     </footer>
 </body>
