--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             background-color: #FF6B6B;
             color: white;
             text-align: center;
-            padding: 40px 0;
+            padding: 40px 0 0 0; /* 상단 패딩만 유지 */
         }
         h1 {
             font-size: 2.5rem;
@@ -71,6 +71,12 @@
         @media (max-width: 768px) {
             .feature {
                 width: 100%;
+            }
+            .nav-menu {
+                flex-direction: column;
+            }
+            .nav-menu li {
+                margin: 5px 0;
             }
         }
         
@@ -143,6 +149,45 @@
             top: 45px;
             left: 28px;
         }
+
+        /* 네비게이션 메뉴 스타일 */
+        .nav-container {
+            background-color: #4ECDC4;
+            padding: 10px 0;
+            margin-top: 20px;
+        }
+        .nav-menu {
+            display: flex;
+            justify-content: center;
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
+        .nav-menu li {
+            margin: 0 15px;
+        }
+        .nav-menu a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+            padding: 5px 10px;
+            border-radius: 4px;
+            transition: background-color 0.3s;
+        }
+        .nav-menu a:hover {
+            background-color: rgba(255, 255, 255, 0.2);
+        }
+        .active {
+            background-color: rgba(255, 255, 255, 0.2);
+        }
+        .cta-button {
+            background-color: #FF9F1C;
+            padding: 8px 15px;
+            border-radius: 4px;
+        }
+        .cta-button:hover {
+            background-color: #FF8C00 !important;
+        }
     </style>
 </head>
 <body>
@@ -161,6 +206,17 @@
             </div>
             <h1>MyQuokka</h1>
             <p>한국에서 외국인의 친구</p>
+        </div>
+        <div class="nav-container">
+            <ul class="nav-menu">
+                <li><a href="#" class="active">홈</a></li>
+                <li><a href="about.html">소개</a></li>
+                <li><a href="services.html">서비스</a></li>
+                <li><a href="pricing.html">요금제</a></li>
+                <li><a href="resources.html">자료실</a></li>
+                <li><a href="contact.html">문의하기</a></li>
+                <li><a href="signup.html" class="cta-button">가입하기</a></li>
+            </ul>
         </div>
     </header>
 
